feat: add uninstall progress callbacks and update UI notifications for plugin uninstallation

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -567,6 +567,11 @@
   "plugin_install_progress_complete": "Установка завершена",
   "plugin_install_progress_preparing": "Подготовка установки скрипт-плагина...",
   "plugin_install_progress_parsing": "Анализ метаданных плагина...",
+  "plugin_uninstall_progress_preparing": "Подготовка к удалению...",
+  "plugin_uninstall_progress_removing": "Удаление файлов плагина...",
+  "plugin_uninstall_progress_cleaning_settings": "Очистка настроек плагина...",
+  "plugin_uninstall_progress_unloading": "Остановка плагина...",
+  "plugin_uninstall_progress_complete": "Удаление завершено",
   "plugin_wpm_reload": "Перезагрузить",
   "plugin_wpm_open_directory": "Открыть каталог плагинов",
   "plugin_wpm_open_directory_failed": "Не удалось открыть каталог плагинов: %s",
