--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -605,6 +605,11 @@
   "plugin_install_progress_complete": "安装完成",
   "plugin_install_progress_preparing": "准备安装脚本插件...",
   "plugin_install_progress_parsing": "解析插件元数据...",
+  "plugin_uninstall_progress_preparing": "准备卸载...",
+  "plugin_uninstall_progress_removing": "正在移除插件文件...",
+  "plugin_uninstall_progress_cleaning_settings": "正在清理插件设置...",
+  "plugin_uninstall_progress_unloading": "正在停止插件...",
+  "plugin_uninstall_progress_complete": "卸载完成",
   "plugin_wpm_reload": "重新加载",
   "plugin_wpm_open_directory": "打开插件目录",
   "plugin_wpm_open_directory_failed": "打开插件目录失败：%s",
