--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -567,6 +567,11 @@
   "plugin_install_progress_complete": "Instalação completa",
   "plugin_install_progress_preparing": "Preparando instalação do plugin de script...",
   "plugin_install_progress_parsing": "Analisando metadados do plugin...",
+  "plugin_uninstall_progress_preparing": "Preparando desinstalação...",
+  "plugin_uninstall_progress_removing": "Removendo arquivos do plugin...",
+  "plugin_uninstall_progress_cleaning_settings": "Limpando configurações do plugin...",
+  "plugin_uninstall_progress_unloading": "Parando plugin...",
+  "plugin_uninstall_progress_complete": "Desinstalação concluída",
   "plugin_wpm_reload": "Recarregar",
   "plugin_wpm_open_directory": "Abrir diretório do plugin",
   "plugin_wpm_open_directory_failed": "Falha ao abrir o diretório do plugin: %s",
