feat: add support for customizable number separators in calculator #4325

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -650,6 +650,11 @@
   "plugin_calculator_copy_result": "Копировать (без разделителя тысяч)",
   "plugin_calculator_copy_result_with_thousands_separator": "Копировать",
   "plugin_calculator_recalculate": "Пересчитать",
+  "plugin_calculator_separator_mode": "Режим разделителя",
+  "plugin_calculator_separator_mode_description": "Выберите стиль разделителя для вычислений и отображения",
+  "plugin_calculator_separator_mode_system_locale": "Системная локаль",
+  "plugin_calculator_separator_mode_dot": "Точка (напр. 123,456.789)",
+  "plugin_calculator_separator_mode_comma": "Запятая (напр. 123.456,789)",
   "plugin_calculator_input_expression": "Введите выражение для вычисления",
   "plugin_emoji_copy": "Копировать эмодзи",
   "plugin_emoji_copy_large": "Копировать большой значок",
