--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -689,6 +689,11 @@
   "plugin_calculator_copy_result_with_thousands_separator": "复制",
   "plugin_calculator_recalculate": "重新计算",
   "plugin_calculator_input_expression": "输入表达式进行计算",
+  "plugin_calculator_separator_mode": "分隔符模式",
+  "plugin_calculator_separator_mode_description": "选择计算和显示的分隔符样式",
+  "plugin_calculator_separator_mode_system_locale": "系统区域设置",
+  "plugin_calculator_separator_mode_dot": "点 (例如 123,456.789)",
+  "plugin_calculator_separator_mode_comma": "逗号 (例如 123.456,789)",
   "plugin_emoji_copy": "复制表情",
   "plugin_emoji_copy_large": "复制大图标",
   "plugin_emoji_remove_frequently_used": "从常用中移除",
