--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -688,6 +688,11 @@
   "plugin_calculator_copy_result_with_thousands_separator": "Copy",
   "plugin_calculator_recalculate": "Recalculate",
   "plugin_calculator_input_expression": "Input expression to calculate",
+  "plugin_calculator_separator_mode": "Separator Mode",
+  "plugin_calculator_separator_mode_description": "Select the separator style for calculation and display",
+  "plugin_calculator_separator_mode_system_locale": "System Locale",
+  "plugin_calculator_separator_mode_dot": "Dot (e.g. 123,456.789)",
+  "plugin_calculator_separator_mode_comma": "Comma (e.g. 123.456,789)",
   "plugin_emoji_copy": "Copy emoji",
   "plugin_emoji_copy_large": "Copy large icon",
   "plugin_emoji_remove_frequently_used": "Remove from frequently used",
