--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -650,6 +650,11 @@
   "plugin_calculator_copy_result": "Copiar (sem separador de milhares)",
   "plugin_calculator_copy_result_with_thousands_separator": "Copiar",
   "plugin_calculator_recalculate": "Recalcular",
+  "plugin_calculator_separator_mode": "Modo de Separador",
+  "plugin_calculator_separator_mode_description": "Selecione o estilo do separador para cálculo e exibição",
+  "plugin_calculator_separator_mode_system_locale": "Local do Sistema",
+  "plugin_calculator_separator_mode_dot": "Ponto (ex: 123,456.789)",
+  "plugin_calculator_separator_mode_comma": "Vírgula (ex: 123.456,789)",
   "plugin_calculator_input_expression": "Digite a expressão para calcular",
   "plugin_emoji_copy": "Copiar emoji",
   "plugin_emoji_copy_large": "Copiar ícone grande",
