feat: enhance calculator plugin with customizable decimal and thousands separators #4325

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -688,11 +688,20 @@
   "plugin_calculator_copy_result_with_thousands_separator": "Copy",
   "plugin_calculator_recalculate": "Recalculate",
   "plugin_calculator_input_expression": "Input expression to calculate",
-  "plugin_calculator_separator_mode": "Separator Mode",
-  "plugin_calculator_separator_mode_description": "Select the separator style for calculation and display",
-  "plugin_calculator_separator_mode_system_locale": "System Locale",
-  "plugin_calculator_separator_mode_dot": "Dot (e.g. 123,456.789)",
-  "plugin_calculator_separator_mode_comma": "Comma (e.g. 123.456,789)",
+  "plugin_calculator_decimal_separator": "Decimal Separator",
+  "plugin_calculator_decimal_separator_description": "Select the decimal separator for calculation and display",
+  "plugin_calculator_decimal_separator_system_locale": "System Locale",
+  "plugin_calculator_decimal_separator_dot": "Dot",
+  "plugin_calculator_decimal_separator_comma": "Comma",
+  "plugin_calculator_thousands_separator": "Thousands Separator",
+  "plugin_calculator_thousands_separator_description": "Select the thousands separator for calculation and display",
+  "plugin_calculator_thousands_separator_system_locale": "System Locale",
+  "plugin_calculator_thousands_separator_comma": "Comma",
+  "plugin_calculator_thousands_separator_dot": "Dot",
+  "plugin_calculator_thousands_separator_space": "Space",
+  "plugin_calculator_thousands_separator_apostrophe": "Apostrophe",
+  "plugin_calculator_thousands_separator_none": "None",
+  "plugin_calculator_separator_preview_example": "Preview example",
   "plugin_emoji_copy": "Copy emoji",
   "plugin_emoji_copy_large": "Copy large icon",
   "plugin_emoji_remove_frequently_used": "Remove from frequently used",
