--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -650,12 +650,21 @@
   "plugin_calculator_copy_result": "Копировать (без разделителя тысяч)",
   "plugin_calculator_copy_result_with_thousands_separator": "Копировать",
   "plugin_calculator_recalculate": "Пересчитать",
-  "plugin_calculator_separator_mode": "Режим разделителя",
-  "plugin_calculator_separator_mode_description": "Выберите стиль разделителя для вычислений и отображения",
-  "plugin_calculator_separator_mode_system_locale": "Системная локаль",
-  "plugin_calculator_separator_mode_dot": "Точка (напр. 123,456.789)",
-  "plugin_calculator_separator_mode_comma": "Запятая (напр. 123.456,789)",
+  "plugin_calculator_decimal_separator": "Десятичный разделитель",
+  "plugin_calculator_decimal_separator_description": "Выберите десятичный разделитель для вычислений и отображения",
+  "plugin_calculator_decimal_separator_system_locale": "Системная локаль",
+  "plugin_calculator_decimal_separator_dot": "Точка",
+  "plugin_calculator_decimal_separator_comma": "Запятая",
+  "plugin_calculator_thousands_separator": "Разделитель тысяч",
+  "plugin_calculator_thousands_separator_description": "Выберите разделитель тысяч для вычислений и отображения",
+  "plugin_calculator_thousands_separator_system_locale": "Системная локаль",
+  "plugin_calculator_thousands_separator_comma": "Запятая",
+  "plugin_calculator_thousands_separator_dot": "Точка",
+  "plugin_calculator_thousands_separator_space": "Пробел",
+  "plugin_calculator_thousands_separator_apostrophe": "Апостроф",
+  "plugin_calculator_thousands_separator_none": "Нет",
   "plugin_calculator_input_expression": "Введите выражение для вычисления",
+  "plugin_calculator_separator_preview_example": "Пример предварительного просмотра",
   "plugin_emoji_copy": "Копировать эмодзи",
   "plugin_emoji_copy_large": "Копировать большой значок",
   "plugin_emoji_remove_frequently_used": "Удалить из часто используемых",
