feat(cloudsync): implement keyring store, oplog notifier, and recovery code generation
- Added `keyring_store.go` for managing cloud sync keys using OS keyring.
- Introduced `oplog_notifier.go` for notifying changes in the oplog.
- Implemented `recovery_code.go` for generating and normalizing recovery codes.
- Created `service.go` to manage cloud sync service state and status.
- Developed setting adapters in `settingadapter` for handling cloud sync settings.
- Added `cloud_sync_applier.go` to apply local and plugin settings based on oplog operations.
- Implemented Flutter entities for cloud sync status and state in `wox_cloud_sync.dart`.
- Created UI views for backup and cloud sync settings in `wox_setting_backup_view.dart` and `wox_setting_cloud_sync_view.dart`.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -58,6 +58,7 @@
   "ui_proxy_url_tips": "Proxy address, e.g. http://localhost:7890",
   "ui_network": "Network",
   "ui_data": "Data",
+  "ui_data_backup_restore_nav": "Backup & Restore",
   "ui_data_config_location": "Configuration Location",
   "ui_data_config_location_tips": "The location where Wox stores your configuration and data files, you can change it to cloud storage location(e.g. iCloud) to sync configurations and data on different computers",
   "ui_data_config_location_change": "Change Location",
@@ -198,6 +199,50 @@
   "ui_data_backup_date": "Date",
   "ui_data_backup_type": "Type",
   "ui_data_backup_type_auto": "Auto",
+  "ui_cloud_sync": "Cloud Sync",
+  "ui_cloud_sync_status_label": "Status",
+  "ui_cloud_sync_enabled": "Enabled",
+  "ui_cloud_sync_disabled": "Disabled",
+  "ui_cloud_sync_not_configured": "Cloud sync is not configured",
+  "ui_cloud_sync_loading": "Loading...",
+  "ui_cloud_sync_device_id": "Device ID",
+  "ui_cloud_sync_key_status": "Key Status",
+  "ui_cloud_sync_key_available": "Available",
+  "ui_cloud_sync_key_missing": "Missing",
+  "ui_cloud_sync_key_version": "Key Version",
+  "ui_cloud_sync_bootstrapped": "Bootstrapped",
+  "ui_cloud_sync_last_push": "Last Push",
+  "ui_cloud_sync_last_pull": "Last Pull",
+  "ui_cloud_sync_backoff_until": "Backoff Until",
+  "ui_cloud_sync_retry_count": "Retry Count",
+  "ui_cloud_sync_last_error": "Last Error",
+  "ui_cloud_sync_never": "Never",
+  "ui_cloud_sync_refresh": "Refresh",
+  "ui_cloud_sync_push": "Push Now",
+  "ui_cloud_sync_pull": "Pull Now",
+  "ui_cloud_sync_recovery_code": "Generate Recovery Code",
+  "ui_cloud_sync_init_key": "Init Key",
+  "ui_cloud_sync_fetch_key": "Fetch Key",
+  "ui_cloud_sync_reset": "Reset Cloud Data",
+  "ui_cloud_sync_recovery_code_title": "Recovery Code",
+  "ui_cloud_sync_recovery_code_tips": "Store this code safely. It is required to access cloud data on new devices.",
+  "ui_cloud_sync_recovery_code_copy": "Copy",
+  "ui_cloud_sync_recovery_code_close": "Close",
+  "ui_cloud_sync_key_init_title": "Initialize Sync Key",
+  "ui_cloud_sync_key_fetch_title": "Fetch Sync Key",
+  "ui_cloud_sync_recovery_code_hint": "Enter recovery code",
+  "ui_cloud_sync_device_name": "Device Name",
+  "ui_cloud_sync_device_name_hint": "Optional device name",
+  "ui_cloud_sync_confirm": "Confirm",
+  "ui_cloud_sync_cancel": "Cancel",
+  "ui_cloud_sync_reset_title": "Reset Cloud Sync",
+  "ui_cloud_sync_reset_warning": "This will delete cloud settings and encryption keys. You will need to initialize sync again.",
+  "ui_cloud_sync_reset_confirm": "Reset",
+  "ui_cloud_sync_plugin_exclusions": "Plugin Sync Exclusions",
+  "ui_cloud_sync_plugin_exclusions_tips": "Checked plugins will not be synced.",
+  "ui_cloud_sync_plugin_exclusions_loading": "Loading plugins...",
+  "ui_cloud_sync_plugin_exclusions_empty": "No installed plugins.",
+  "ui_cloud_sync_plugin_exclusions_refresh": "Refresh Plugins",
   "ui_data_backup_type_manual": "Manual",
   "ui_usage": "Usage",
   "ui_usage_opened": "Wox opened",
