--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -56,6 +56,7 @@
   "ui_proxy_url_tips": "Endereo do proxy, por exemplo: http://localhost:7890",
   "ui_network": "Rede",
   "ui_data": "Dados",
+  "ui_data_backup_restore_nav": "Backup e restauração",
   "ui_data_config_location": "Local da Configuração",
   "ui_data_config_location_tips": "O local onde o Wox armazena seus arquivos de configuração e dados, você pode alterá-lo para o local de armazenamento de nuvem(por exemplo, iCloud) para sincronizar configurações e dados em diferentes computadores",
   "ui_data_config_location_change": "Alterar Local",
@@ -195,6 +196,50 @@
   "ui_data_backup_date": "Data",
   "ui_data_backup_type": "Tipo",
   "ui_data_backup_type_auto": "Auto",
+  "ui_cloud_sync": "Sincronização na Nuvem",
+  "ui_cloud_sync_status_label": "Status",
+  "ui_cloud_sync_enabled": "Ativado",
+  "ui_cloud_sync_disabled": "Desativado",
+  "ui_cloud_sync_not_configured": "A sincronização na nuvem não está configurada",
+  "ui_cloud_sync_loading": "Carregando...",
+  "ui_cloud_sync_device_id": "ID do dispositivo",
+  "ui_cloud_sync_key_status": "Status da chave",
+  "ui_cloud_sync_key_available": "Disponível",
+  "ui_cloud_sync_key_missing": "Ausente",
+  "ui_cloud_sync_key_version": "Versão da chave",
+  "ui_cloud_sync_bootstrapped": "Inicializado",
+  "ui_cloud_sync_last_push": "Último envio",
+  "ui_cloud_sync_last_pull": "Última sincronização",
+  "ui_cloud_sync_backoff_until": "Recuo até",
+  "ui_cloud_sync_retry_count": "Tentativas",
+  "ui_cloud_sync_last_error": "Último erro",
+  "ui_cloud_sync_never": "Nunca",
+  "ui_cloud_sync_refresh": "Atualizar",
+  "ui_cloud_sync_push": "Enviar agora",
+  "ui_cloud_sync_pull": "Baixar agora",
+  "ui_cloud_sync_recovery_code": "Gerar código de recuperação",
+  "ui_cloud_sync_init_key": "Inicializar chave",
+  "ui_cloud_sync_fetch_key": "Buscar chave",
+  "ui_cloud_sync_reset": "Redefinir dados da nuvem",
+  "ui_cloud_sync_recovery_code_title": "Código de recuperação",
+  "ui_cloud_sync_recovery_code_tips": "Guarde este código com segurança. Ele é necessário para acessar os dados na nuvem em novos dispositivos.",
+  "ui_cloud_sync_recovery_code_copy": "Copiar",
+  "ui_cloud_sync_recovery_code_close": "Fechar",
+  "ui_cloud_sync_key_init_title": "Inicializar chave de sincronização",
+  "ui_cloud_sync_key_fetch_title": "Buscar chave de sincronização",
+  "ui_cloud_sync_recovery_code_hint": "Digite o código de recuperação",
+  "ui_cloud_sync_device_name": "Nome do dispositivo",
+  "ui_cloud_sync_device_name_hint": "Nome do dispositivo (opcional)",
+  "ui_cloud_sync_confirm": "Confirmar",
+  "ui_cloud_sync_cancel": "Cancelar",
+  "ui_cloud_sync_reset_title": "Redefinir sincronização na nuvem",
+  "ui_cloud_sync_reset_warning": "Isso apagará as configurações e chaves de criptografia na nuvem. Você precisará inicializar novamente.",
+  "ui_cloud_sync_reset_confirm": "Redefinir",
+  "ui_cloud_sync_plugin_exclusions": "Exclusões de sincronização de plugins",
+  "ui_cloud_sync_plugin_exclusions_tips": "Plugins marcados não serão sincronizados.",
+  "ui_cloud_sync_plugin_exclusions_loading": "Carregando plugins...",
+  "ui_cloud_sync_plugin_exclusions_empty": "Nenhum plugin instalado.",
+  "ui_cloud_sync_plugin_exclusions_refresh": "Atualizar plugins",
   "ui_data_backup_type_manual": "Manual",
   "ui_usage": "Uso",
   "ui_usage_opened": "Wox aberto",
