--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -56,6 +56,7 @@
   "ui_proxy_url_tips": "Адрес прокси, например: http://localhost:7890",
   "ui_network": "Сеть",
   "ui_data": "Данные",
+  "ui_data_backup_restore_nav": "Резервное копирование и восстановление",
   "ui_data_config_location": "Расположение конфигурации",
   "ui_data_config_location_tips": "Место, где Wox хранит ваши файлы конфигурации и данных, вы можете изменить его на облачное хранилище(например, iCloud) для синхронизации конфигураций и данных на разных компьютерах",
   "ui_data_config_location_change": "Изменить расположение",
@@ -195,6 +196,50 @@
   "ui_data_backup_date": "Дата",
   "ui_data_backup_type": "Тип",
   "ui_data_backup_type_auto": "Авто",
+  "ui_cloud_sync": "Облачная синхронизация",
+  "ui_cloud_sync_status_label": "Статус",
+  "ui_cloud_sync_enabled": "Включено",
+  "ui_cloud_sync_disabled": "Выключено",
+  "ui_cloud_sync_not_configured": "Облачная синхронизация не настроена",
+  "ui_cloud_sync_loading": "Загрузка...",
+  "ui_cloud_sync_device_id": "ID устройства",
+  "ui_cloud_sync_key_status": "Статус ключа",
+  "ui_cloud_sync_key_available": "Доступен",
+  "ui_cloud_sync_key_missing": "Отсутствует",
+  "ui_cloud_sync_key_version": "Версия ключа",
+  "ui_cloud_sync_bootstrapped": "Инициализировано",
+  "ui_cloud_sync_last_push": "Последняя отправка",
+  "ui_cloud_sync_last_pull": "Последнее получение",
+  "ui_cloud_sync_backoff_until": "Пауза до",
+  "ui_cloud_sync_retry_count": "Количество попыток",
+  "ui_cloud_sync_last_error": "Последняя ошибка",
+  "ui_cloud_sync_never": "Никогда",
+  "ui_cloud_sync_refresh": "Обновить",
+  "ui_cloud_sync_push": "Отправить сейчас",
+  "ui_cloud_sync_pull": "Получить сейчас",
+  "ui_cloud_sync_recovery_code": "Сгенерировать код восстановления",
+  "ui_cloud_sync_init_key": "Инициализировать ключ",
+  "ui_cloud_sync_fetch_key": "Получить ключ",
+  "ui_cloud_sync_reset": "Сбросить данные в облаке",
+  "ui_cloud_sync_recovery_code_title": "Код восстановления",
+  "ui_cloud_sync_recovery_code_tips": "Сохраните этот код. Он нужен для доступа к данным на новых устройствах.",
+  "ui_cloud_sync_recovery_code_copy": "Копировать",
+  "ui_cloud_sync_recovery_code_close": "Закрыть",
+  "ui_cloud_sync_key_init_title": "Инициализация ключа синхронизации",
+  "ui_cloud_sync_key_fetch_title": "Получение ключа синхронизации",
+  "ui_cloud_sync_recovery_code_hint": "Введите код восстановления",
+  "ui_cloud_sync_device_name": "Имя устройства",
+  "ui_cloud_sync_device_name_hint": "Имя устройства (необязательно)",
+  "ui_cloud_sync_confirm": "Подтвердить",
+  "ui_cloud_sync_cancel": "Отмена",
+  "ui_cloud_sync_reset_title": "Сброс облачной синхронизации",
+  "ui_cloud_sync_reset_warning": "Это удалит настройки и ключи шифрования в облаке. Потребуется инициализировать заново.",
+  "ui_cloud_sync_reset_confirm": "Сбросить",
+  "ui_cloud_sync_plugin_exclusions": "Исключения синхронизации плагинов",
+  "ui_cloud_sync_plugin_exclusions_tips": "Отмеченные плагины не будут синхронизироваться.",
+  "ui_cloud_sync_plugin_exclusions_loading": "Загрузка плагинов...",
+  "ui_cloud_sync_plugin_exclusions_empty": "Нет установленных плагинов.",
+  "ui_cloud_sync_plugin_exclusions_refresh": "Обновить плагины",
   "ui_data_backup_type_manual": "Ручной",
   "ui_usage": "Статистика",
   "ui_usage_opened": "Открытия Wox",
