--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -58,6 +58,7 @@
   "ui_proxy_url_tips": "代理地址，例如：http://localhost:7890",
   "ui_network": "网络",
   "ui_data": "数据",
+  "ui_data_backup_restore_nav": "备份与恢复",
   "ui_data_config_location": "配置位置",
   "ui_data_config_location_tips": "Wox存储配置和数据文件的位置,你可以使用网盘位置(例如icloud)在不同电脑上同步配置和数据",
   "ui_data_config_location_change": "更改位置",
@@ -198,6 +199,50 @@
   "ui_data_backup_date": "日期",
   "ui_data_backup_type": "类型",
   "ui_data_backup_type_auto": "自动",
+  "ui_cloud_sync": "云同步",
+  "ui_cloud_sync_status_label": "状态",
+  "ui_cloud_sync_enabled": "已启用",
+  "ui_cloud_sync_disabled": "未启用",
+  "ui_cloud_sync_not_configured": "未配置云同步",
+  "ui_cloud_sync_loading": "加载中...",
+  "ui_cloud_sync_device_id": "设备ID",
+  "ui_cloud_sync_key_status": "密钥状态",
+  "ui_cloud_sync_key_available": "可用",
+  "ui_cloud_sync_key_missing": "缺失",
+  "ui_cloud_sync_key_version": "密钥版本",
+  "ui_cloud_sync_bootstrapped": "已初始化",
+  "ui_cloud_sync_last_push": "上次推送",
+  "ui_cloud_sync_last_pull": "上次拉取",
+  "ui_cloud_sync_backoff_until": "退避至",
+  "ui_cloud_sync_retry_count": "重试次数",
+  "ui_cloud_sync_last_error": "最近错误",
+  "ui_cloud_sync_never": "从未",
+  "ui_cloud_sync_refresh": "刷新",
+  "ui_cloud_sync_push": "立即推送",
+  "ui_cloud_sync_pull": "立即拉取",
+  "ui_cloud_sync_recovery_code": "生成恢复码",
+  "ui_cloud_sync_init_key": "初始化密钥",
+  "ui_cloud_sync_fetch_key": "获取密钥",
+  "ui_cloud_sync_reset": "重置云数据",
+  "ui_cloud_sync_recovery_code_title": "恢复码",
+  "ui_cloud_sync_recovery_code_tips": "请妥善保存恢复码，新设备需要它来访问云端数据。",
+  "ui_cloud_sync_recovery_code_copy": "复制",
+  "ui_cloud_sync_recovery_code_close": "关闭",
+  "ui_cloud_sync_key_init_title": "初始化同步密钥",
+  "ui_cloud_sync_key_fetch_title": "获取同步密钥",
+  "ui_cloud_sync_recovery_code_hint": "请输入恢复码",
+  "ui_cloud_sync_device_name": "设备名称",
+  "ui_cloud_sync_device_name_hint": "可选设备名称",
+  "ui_cloud_sync_confirm": "确认",
+  "ui_cloud_sync_cancel": "取消",
+  "ui_cloud_sync_reset_title": "重置云同步",
+  "ui_cloud_sync_reset_warning": "此操作将删除云端设置和加密密钥，需要重新初始化同步。",
+  "ui_cloud_sync_reset_confirm": "重置",
+  "ui_cloud_sync_plugin_exclusions": "插件同步排除",
+  "ui_cloud_sync_plugin_exclusions_tips": "勾选的插件不会被同步。",
+  "ui_cloud_sync_plugin_exclusions_loading": "插件加载中...",
+  "ui_cloud_sync_plugin_exclusions_empty": "没有已安装插件。",
+  "ui_cloud_sync_plugin_exclusions_refresh": "刷新插件",
   "ui_data_backup_type_manual": "手动",
   "ui_usage": "使用情况",
   "ui_usage_opened": "Wox 打开次数",
