feat: add reindex command for app management and improve icon handling

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -413,6 +413,10 @@
   "plugin_app_macos_prefpane_accessibility_keyboard": "Keyboard (Accessibility)",
   "plugin_app_macos_prefpane_pointer_control": "Pointer Control",
   "plugin_app_macos_prefpane_switch_control": "Switch Control",
+  "plugin_app_reindex": "Reindex apps",
+  "plugin_app_start_reindex": "Start reindexing",
+  "plugin_app_reindex_completed": "Reindexing completed",
+  "plugin_app_command_reindex": "Reindex apps",
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
   "plugin_explorer_open": "Open",
   "plugin_explorer_open_containing_folder": "Open containing folder",
