--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -410,6 +410,10 @@
   "plugin_app_macos_prefpane_accessibility_keyboard": "Teclado (Acessibilidade)",
   "plugin_app_macos_prefpane_pointer_control": "Controle do Cursor",
   "plugin_app_macos_prefpane_switch_control": "Controle Assistivo",
+  "plugin_app_reindex": "Reindexar aplicativos",
+  "plugin_app_start_reindex": "Iniciar reindexação",
+  "plugin_app_reindex_completed": "Reindexação concluída",
+  "plugin_app_command_reindex": "Reindexar aplicativos",
   "plugin_browser_bookmark_open_in_browser": "Abrir no navegador",
   "plugin_explorer_open": "Abrir",
   "plugin_explorer_open_containing_folder": "Abrir pasta contendo",
