--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -414,6 +414,10 @@
   "plugin_app_macos_prefpane_accessibility_keyboard": "键盘 (辅助功能)",
   "plugin_app_macos_prefpane_pointer_control": "指针控制",
   "plugin_app_macos_prefpane_switch_control": "切换控制",
+  "plugin_app_reindex": "重新索引应用",
+  "plugin_app_start_reindex": "开始重新索引",
+  "plugin_app_reindex_completed": "重新索引完成",
+  "plugin_app_command_reindex": "重新索引应用",
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
   "plugin_explorer_open": "打开",
   "plugin_explorer_open_containing_folder": "打开所在文件夹",
