feat: add reindex command for app management and improve icon handling

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -455,6 +455,10 @@
   "plugin_app_macos_prefpane_accessibility_keyboard": "Клавиатура (Универсальный доступ)",
   "plugin_app_macos_prefpane_pointer_control": "Управление указателем",
   "plugin_app_macos_prefpane_switch_control": "Виртуальный контроллер",
+  "plugin_app_reindex": "Переиндексация приложений",
+  "plugin_app_start_reindex": "Начать переиндексацию",
+  "plugin_app_reindex_completed": "Переиндексация завершена",
+  "plugin_app_command_reindex": "Переиндексация приложений",
   "plugin_browser_bookmark_open_in_browser": "Открыть в браузере",
   "plugin_explorer_open": "Открыть",
   "plugin_explorer_open_containing_folder": "Открыть содержащую папку",
