feat(i18n): add explorer hint translations

--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -466,8 +466,10 @@
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
   "plugin_explorer_open": "打开",
   "plugin_explorer_open_containing_folder": "打开所在文件夹",
-  "plugin_explorer_jump_to": "跳转到",
-  "plugin_clipboard_copy_date": "复制日期",
+   "plugin_explorer_jump_to": "跳转到",
+   "plugin_explorer_setting_show_hint": "显示文件管理器提示",
+   "plugin_explorer_hint_message": "使用 Wox 快速过滤当前文件夹",
+   "plugin_clipboard_copy_date": "复制日期",
   "plugin_clipboard_copy_characters": "复制字符",
   "plugin_clipboard_image_width": "图片宽度",
   "plugin_clipboard_image_height": "图片高度",
