--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -465,8 +465,10 @@
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
   "plugin_explorer_open": "Open",
   "plugin_explorer_open_containing_folder": "Open containing folder",
-  "plugin_explorer_jump_to": "Jump to",
-  "plugin_clipboard_copy_date": "Copy date",
+   "plugin_explorer_jump_to": "Jump to",
+   "plugin_explorer_setting_show_hint": "Show file explorer hint",
+   "plugin_explorer_hint_message": "Use Wox to quickly filter current folder",
+   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
   "plugin_clipboard_image_height": "Image height",
