--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -635,6 +635,14 @@
   "plugin_wpm_enter_plugin_name_subtitle": "输入您要创建的插件名称",
   "plugin_wpm_group_regular_plugins": "常规插件 (全功能插件)",
   "plugin_wpm_group_script_plugins": "脚本插件 (轻量单文件插件)",
+  "plugin_wpm_script_template_nodejs": "JavaScript 脚本插件",
+  "plugin_wpm_script_template_python": "Python 脚本插件",
+  "plugin_wpm_script_plugin_exists_title": "⚠️ %s（已存在）",
+  "plugin_wpm_script_plugin_exists_subtitle": "文件“%s”已存在，请选择下面的操作。",
+  "plugin_wpm_script_plugin_open_existing_file": "打开现有文件",
+  "plugin_wpm_script_plugin_overwrite_existing_file": "覆盖现有文件",
+  "plugin_wpm_script_plugin_create_title": "创建 %s",
+  "plugin_wpm_open_file_failed": "打开文件失败：%s",
   "plugin_wpm_script_plugin_created_success": "脚本插件创建成功：%s",
   "plugin_wpm_script_plugin_opened_directory": "已打开目录，请编辑：%s",
   "plugin_wpm_create_script_file_failed": "创建脚本文件失败：%s",
