feat: update plugin runtime options and improve error handling for script plugins #4330

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -673,6 +673,14 @@
   "plugin_wpm_enter_plugin_name_subtitle": "Type the name of the plugin you want to create",
   "plugin_wpm_group_regular_plugins": "Regular Plugins (full featured plugins)",
   "plugin_wpm_group_script_plugins": "Script Plugins (single-file script plugins)",
+  "plugin_wpm_script_template_nodejs": "JavaScript Script Plugin",
+  "plugin_wpm_script_template_python": "Python Script Plugin",
+  "plugin_wpm_script_plugin_exists_title": "⚠️ %s (Already exists)",
+  "plugin_wpm_script_plugin_exists_subtitle": "File '%s' already exists. Choose an action below.",
+  "plugin_wpm_script_plugin_open_existing_file": "Open existing file",
+  "plugin_wpm_script_plugin_overwrite_existing_file": "Overwrite existing file",
+  "plugin_wpm_script_plugin_create_title": "Create %s",
+  "plugin_wpm_open_file_failed": "Failed to open file: %s",
   "plugin_wpm_script_plugin_created_success": "Script plugin created successfully: %s",
   "plugin_wpm_script_plugin_opened_directory": "Opened the folder. Please edit: %s",
   "plugin_wpm_create_script_file_failed": "Failed to create script file: %s",
