--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -636,6 +636,14 @@
   "plugin_wpm_enter_plugin_name_subtitle": "Введите имя плагина, который вы хотите создать",
   "plugin_wpm_group_regular_plugins": "Обычные плагины (плагины с полной функциональностью)",
   "plugin_wpm_group_script_plugins": "Скриптовые плагины (однофайловые скриптовые плагины)",
+  "plugin_wpm_script_template_nodejs": "Скриптовый плагин JavaScript",
+  "plugin_wpm_script_template_python": "Скриптовый плагин Python",
+  "plugin_wpm_script_plugin_exists_title": "⚠️ %s (Уже существует)",
+  "plugin_wpm_script_plugin_exists_subtitle": "Файл «%s» уже существует. Выберите действие ниже.",
+  "plugin_wpm_script_plugin_open_existing_file": "Открыть существующий файл",
+  "plugin_wpm_script_plugin_overwrite_existing_file": "Перезаписать существующий файл",
+  "plugin_wpm_script_plugin_create_title": "Создать %s",
+  "plugin_wpm_open_file_failed": "Не удалось открыть файл: %s",
   "plugin_wpm_script_plugin_created_success": "Скриптовый плагин успешно создан: %s",
   "plugin_wpm_script_plugin_opened_directory": "Папка открыта. Отредактируйте: %s",
   "plugin_wpm_create_script_file_failed": "Не удалось создать файл скрипта: %s",
