--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -636,6 +636,14 @@
   "plugin_wpm_enter_plugin_name_subtitle": "Digite o nome do plugin que você deseja criar",
   "plugin_wpm_group_regular_plugins": "Plugins Regulares (plugins com funcionalidade completa)",
   "plugin_wpm_group_script_plugins": "Plugins de Script (plugins de script de um único arquivo)",
+  "plugin_wpm_script_template_nodejs": "Plugin de Script JavaScript",
+  "plugin_wpm_script_template_python": "Plugin de Script Python",
+  "plugin_wpm_script_plugin_exists_title": "⚠️ %s (Já existe)",
+  "plugin_wpm_script_plugin_exists_subtitle": "O arquivo '%s' já existe. Escolha uma ação abaixo.",
+  "plugin_wpm_script_plugin_open_existing_file": "Abrir arquivo existente",
+  "plugin_wpm_script_plugin_overwrite_existing_file": "Sobrescrever arquivo existente",
+  "plugin_wpm_script_plugin_create_title": "Criar %s",
+  "plugin_wpm_open_file_failed": "Falha ao abrir o arquivo: %s",
   "plugin_wpm_script_plugin_created_success": "Plugin de script criado com sucesso: %s",
   "plugin_wpm_script_plugin_opened_directory": "Pasta aberta. Edite: %s",
   "plugin_wpm_create_script_file_failed": "Falha ao criar arquivo de script: %s",
