feat(explorer): improve file selection and navigation in Explorer

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -461,11 +461,11 @@
   "plugin_app_command_reindex": "Reindexar aplicativos",
   "plugin_browser_bookmark_open_in_browser": "Abrir no navegador",
   "plugin_explorer_open": "Abrir",
-  "plugin_explorer_open_containing_folder": "Abrir pasta contendo",
-   "plugin_explorer_jump_to": "Ir para",
-   "plugin_explorer_setting_show_hint": "Mostrar dica do explorador de arquivos",
-   "plugin_explorer_hint_message": "Use Wox para filtrar rapidamente a pasta atual",
-   "plugin_indicator_activate": "Ativar",
+  "plugin_explorer_reveal_in_explorer": "Revelar no explorador de arquivos",
+  "plugin_explorer_jump_to": "Ir para",
+  "plugin_explorer_setting_show_hint": "Mostrar dica do explorador de arquivos",
+  "plugin_explorer_hint_message": "Use Wox para filtrar rapidamente a pasta atual",
+  "plugin_indicator_activate": "Ativar",
   "plugin_indicator_activate_plugin": "Ativar o plugin %s",
   "plugin_paste_to_window": "Colar em %s",
   "plugin_sys_empty_trash": "Esvaziar lixeira",
