--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -461,11 +461,11 @@
   "plugin_app_command_reindex": "Переиндексация приложений",
   "plugin_browser_bookmark_open_in_browser": "Открыть в браузере",
   "plugin_explorer_open": "Открыть",
-  "plugin_explorer_open_containing_folder": "Открыть содержащую папку",
-   "plugin_explorer_jump_to": "Перейти к",
-   "plugin_explorer_setting_show_hint": "Показать подсказку проводника",
-   "plugin_explorer_hint_message": "Используйте Wox для быстрой фильтрации текущей папки",
-   "plugin_indicator_activate": "Активировать",
+  "plugin_explorer_reveal_in_explorer": "Показать в проводнике",
+  "plugin_explorer_jump_to": "Перейти к",
+  "plugin_explorer_setting_show_hint": "Показать подсказку проводника",
+  "plugin_explorer_hint_message": "Используйте Wox для быстрой фильтрации текущей папки",
+  "plugin_indicator_activate": "Активировать",
   "plugin_indicator_activate_plugin": "Активировать плагин %s",
   "plugin_paste_to_window": "Вставить в %s",
   "plugin_sys_empty_trash": "Очистить корзину",
