--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -468,6 +468,7 @@
   "plugin_explorer_jump_to": "Jump to",
   "plugin_explorer_setting_show_hint": "Show file explorer hint",
   "plugin_explorer_hint_message": "Use Wox to quickly filter current folder",
+  "plugin_explorer_hint_message_dialog": "Use Wox to quickly navigate folders",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
