--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -345,7 +345,7 @@
   "plugin_doctor_plugin_description": "Check your system and Wox settings",
   "plugin_emoji_plugin_name": "Emoji",
   "plugin_emoji_plugin_description": "Search and copy emojis",
-  "plugin_explorer_plugin_name": "Current Folder Search",
+  "plugin_explorer_plugin_name": "File Explorer Search",
   "plugin_explorer_plugin_description": "Search files in the currently active file manager window",
   "plugin_explorer_common_folder_home": "Home",
   "plugin_explorer_common_folder_desktop": "Desktop",
@@ -467,8 +467,10 @@
   "plugin_explorer_reveal_in_explorer": "Reveal in file explorer",
   "plugin_explorer_jump_to": "Jump to",
   "plugin_explorer_setting_show_hint": "Show file explorer hint",
-  "plugin_explorer_hint_message": "Use Wox to quickly filter current folder",
-  "plugin_explorer_hint_message_dialog": "Use Wox to quickly navigate folders",
+  "plugin_explorer_hint_tooltip_message": "Use Wox to quickly filter current folder (you can disable this hint in plugin setting of file explorer search)",
+  "plugin_explorer_hint_tooltip_message_dialog": "Use Wox to quickly navigate folders (you can disable this hint in plugin setting of file explorer search)",
+  "plugin_explorer_hint_message": "Click to filter",
+  "plugin_explorer_hint_message_dialog": "Click to navigate",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
