--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -342,7 +342,7 @@
   "plugin_doctor_plugin_description": "Verificar seu sistema e as configurações do Wox",
   "plugin_emoji_plugin_name": "Emoji",
   "plugin_emoji_plugin_description": "Pesquisar e copiar emojis",
-  "plugin_explorer_plugin_name": "Pesquisa na pasta atual",
+  "plugin_explorer_plugin_name": "Explorador de Arquivos",
   "plugin_explorer_plugin_description": "Pesquisar arquivos na janela do gerenciador de arquivos ativa no momento",
   "plugin_explorer_common_folder_home": "Início",
   "plugin_explorer_common_folder_desktop": "Área de trabalho",
@@ -464,8 +464,10 @@
   "plugin_explorer_reveal_in_explorer": "Revelar no explorador de arquivos",
   "plugin_explorer_jump_to": "Ir para",
   "plugin_explorer_setting_show_hint": "Mostrar dica do explorador de arquivos",
-  "plugin_explorer_hint_message": "Use Wox para filtrar rapidamente a pasta atual",
-  "plugin_explorer_hint_message_dialog": "Use Wox para navegar rapidamente pelas pastas",
+  "plugin_explorer_hint_tooltip_message": "Clique em mim para filtrar rapidamente as pastas (você pode desativar esta dica nas configurações do plugin)",
+  "plugin_explorer_hint_tooltip_message_dialog": "Clique em mim para usar o Wox para navegar rapidamente pelas pastas (você pode desativar esta dica nas configurações do plugin)",
+  "plugin_explorer_hint_message": "Clique para filtrar",
+  "plugin_explorer_hint_message_dialog": "Clique para navegar",
   "plugin_indicator_activate": "Ativar",
   "plugin_indicator_activate_plugin": "Ativar o plugin %s",
   "plugin_paste_to_window": "Colar em %s",
