feat: add tooltip support to overlay windows
- Introduced tooltip options in OverlayOptions structure for both macOS and Windows overlays.
- Implemented tooltip display logic in OverlayWindow for macOS, including a new OverlayTooltipWindow class.
- Enhanced Windows overlay to manage tooltip visibility and layout, including tooltip icon handling.
- Updated Go bindings to support tooltip parameters in ShowOverlay function.
- Improved HTTP utility for cleaner code by consolidating request options.

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -297,7 +297,7 @@
   "plugin_doctor_plugin_description": "Проверка системы и настроек Wox",
   "plugin_emoji_plugin_name": "Эмодзи",
   "plugin_emoji_plugin_description": "Поиск и копирование эмодзи",
-  "plugin_explorer_plugin_name": "Поиск в текущей папке",
+  "plugin_explorer_plugin_name": "Проводник файлов",
   "plugin_explorer_plugin_description": "Поиск файлов в активном окне файлового менеджера",
   "plugin_explorer_common_folder_home": "Домашняя папка",
   "plugin_explorer_common_folder_desktop": "Рабочий стол",
@@ -419,8 +419,10 @@
   "plugin_explorer_reveal_in_explorer": "Показать в проводнике",
   "plugin_explorer_jump_to": "Перейти к",
   "plugin_explorer_setting_show_hint": "Показать подсказку проводника",
-  "plugin_explorer_hint_message": "Используйте Wox для быстрой фильтрации текущей папки",
-  "plugin_explorer_hint_message_dialog": "Используйте Wox для быстрой навигации по папкам",
+  "plugin_explorer_hint_tooltip_message": "Используйте Wox для быстрого перехода по папкам (вы можете отключить эту подсказку в настройках плагина)",
+  "plugin_explorer_hint_tooltip_message_dialog": "Используйте Wox для быстрого перехода по папкам (вы можете отключить эту подсказку в настройках плагина)",
+  "plugin_explorer_hint_message": "Нажмите, чтобы отфильтровать",
+  "plugin_explorer_hint_message_dialog": "Нажмите, чтобы перейти",
   "plugin_indicator_activate": "Активировать",
   "plugin_indicator_activate_plugin": "Активировать плагин %s",
   "plugin_paste_to_window": "Вставить в %s",
