--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -300,7 +300,7 @@
   "plugin_doctor_plugin_description": "检查系统和 Wox 设置",
   "plugin_emoji_plugin_name": "表情符号",
   "plugin_emoji_plugin_description": "搜索并复制表情符号",
-  "plugin_explorer_plugin_name": "当前文件夹搜索",
+  "plugin_explorer_plugin_name": "文件管理器搜索",
   "plugin_explorer_plugin_description": "在当前活动的文件管理器窗口中搜索文件",
   "plugin_explorer_common_folder_home": "主目录",
   "plugin_explorer_common_folder_desktop": "桌面",
@@ -423,8 +423,10 @@
   "plugin_explorer_reveal_in_explorer": "在文件管理器中显示",
   "plugin_explorer_jump_to": "跳转到",
   "plugin_explorer_setting_show_hint": "显示文件管理器提示",
-  "plugin_explorer_hint_message": "使用 Wox 快速过滤当前文件夹",
-  "plugin_explorer_hint_message_dialog": "使用 Wox 快速导航文件夹",
+  "plugin_explorer_hint_tooltip_message": "使用 Wox 快速过滤当前文件夹 (你可以在文件管理器插件设置中关闭此提示)",
+  "plugin_explorer_hint_tooltip_message_dialog": "使用 Wox 快速导航文件夹 (你可以在文件管理器插件设置中关闭此提示)",
+  "plugin_explorer_hint_message": "点击过滤",
+  "plugin_explorer_hint_message_dialog": "点击导航",
   "plugin_clipboard_copy_date": "复制日期",
   "plugin_clipboard_copy_characters": "复制字符",
   "plugin_clipboard_image_width": "图片宽度",
